feat: add news and benefits sections

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap"
       rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/euclid-circular-a"
+      rel="stylesheet" />
     <title>Document</title>
   </head>
 
@@ -283,6 +286,9 @@
 
       <section class="benefits">
         <div class="benefits__wrapper">
+          <img
+            src="./assets/img/png/best-quality-backgraund.png"
+            class="benefits__best-quelity-backgraund" />
           <div class="benefits__exposition">
             <img
               src="./assets/img/png/benefits-img.png"
@@ -317,19 +323,229 @@
                   src="./assets/img/svg/benefits-card.svg"
                   class="card__icon" />
               </div>
-              <p class="card__title">Самые выгодные и низкие цены</p>
+              <p class="card__title card__title--first">
+                Самые выгодные и низкие цены
+              </p>
               <p class="card__description">
-                В наличии широкий ассортимент, а также доступные цены на
-                ноутбуки Dell
+                В наличии широкий ассортимент, а также доступные цены
+                <br />
+                на ноутбуки Dell
               </p>
             </div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+
+            <div class="card">
+              <img
+                src="./assets/img/svg/background-vector.svg"
+                class="card__backgraund-img" />
+              <div class="card__icon-wrapper">
+                <img
+                  src="./assets/img/svg/benefits-done.svg"
+                  class="card__icon" />
+              </div>
+              <p class="card__title">Авторизованный сервисный центр DELL</p>
+              <p class="card__description">
+                Сертифицированный сервисный центр по ремонту техники Dell
+                в России и странах СНГ
+              </p>
+            </div>
+
+            <div class="card">
+              <img
+                src="./assets/img/svg/background-vector.svg"
+                class="card__backgraund-img card__backgraund-img--third" />
+              <div class="card__icon-wrapper">
+                <img
+                  src="./assets/img/svg/benefits-experts.svg"
+                  class="card__icon" />
+              </div>
+              <p class="card__title">Высокий уровень технической экспертизы</p>
+              <p class="card__description">
+                Мы прошли аттестацию в виде тестирования, где показали высокий
+                уровень знаний
+              </p>
+            </div>
+
+            <div class="card">
+              <img
+                src="./assets/img/svg/background-vector.svg"
+                class="card__backgraund-img card__backgraund-img--fourth" />
+              <div class="card__icon-wrapper">
+                <img
+                  src="./assets/img/svg/benefits-box.svg"
+                  class="card__icon" />
+              </div>
+              <p class="card__title">Официальный партнер DELL</p>
+              <p class="card__description card__description--fourth">
+                Официальный поставщик продукции DELL в России и странах СНГ
+              </p>
+            </div>
           </div>
         </div>
       </section>
-      <section></section>
+
+      <section class="news">
+        <div class="news__wrapper">
+          <div class="news__description description">
+            <div class="description__wrapper">
+              <p class="description__title">Последние новости</p>
+
+              <p class="description__exposition">
+                Вы можете посмотреть ещё больше интересных новостей и узнать о
+                последних новинках, перейдя по кнопке
+              </p>
+            </div>
+            <a class="link">
+              <span class="link__description">Все новости</span>
+              <div class="link__button">
+                <img
+                  src="./assets/img/svg/link-button-arrow.svg"
+                  class="link__button-img" />
+              </div>
+            </a>
+          </div>
+
+          <div class="news__cards">
+            <div class="card">
+              <img
+                src="./assets/img/png/news-backgraund-1.png"
+                class="card__backgraund-img" />
+              <img
+                src="./assets/img/svg/news-img-part1.svg"
+                class="card__img-part-one" />
+              <img
+                src="./assets/img/svg/news-img-part2.svg"
+                class="card__img-part-two" />
+
+              <div class="card__content">
+                <div class="card__title-wrapper">
+                  <p class="card__title">GE использует технологии Dell</p>
+                  <button class="card__button">
+                    <img src="./assets/img/svg/link-button-arrow.svg" />
+                  </button>
+                </div>
+                <p class="card__description">
+                  Вы можете посмотреть ещё больше интересных
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/img/png/news-backgraund-2.png"
+                class="card__backgraund-img" />
+              <img
+                src="./assets/img/svg/news-img-part1.svg"
+                class="card__img-part-one" />
+              <img
+                src="./assets/img/svg/news-img-part2.svg"
+                class="card__img-part-two" />
+
+              <div class="card__content">
+                <div class="card__title-wrapper">
+                  <p class="card__title">GE использует технологии Dell</p>
+                  <button class="card__button">
+                    <img src="./assets/img/svg/link-button-arrow.svg" />
+                  </button>
+                </div>
+                <p class="card__description">
+                  Вы можете посмотреть ещё больше интересных
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/img/png/news-backgraund-3.png"
+                class="card__backgraund-img" />
+              <img
+                src="./assets/img/svg/news-img-part1.svg"
+                class="card__img-part-one" />
+              <img
+                src="./assets/img/svg/news-img-part2.svg"
+                class="card__img-part-two" />
+
+              <div class="card__content">
+                <div class="card__title-wrapper">
+                  <p class="card__title">GE использует технологии Dell</p>
+                  <button class="card__button">
+                    <img src="./assets/img/svg/link-button-arrow.svg" />
+                  </button>
+                </div>
+                <p class="card__description">
+                  Вы можете посмотреть ещё больше интересных
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/img/png/news-backgraund-4.png"
+                class="card__backgraund-img" />
+              <img
+                src="./assets/img/svg/news-img-part1.svg"
+                class="card__img-part-one" />
+              <img
+                src="./assets/img/svg/news-img-part2.svg"
+                class="card__img-part-two" />
+
+              <div class="card__content">
+                <div class="card__title-wrapper">
+                  <p class="card__title">GE использует технологии Dell</p>
+                  <button class="card__button">
+                    <img src="./assets/img/svg/link-button-arrow.svg" />
+                  </button>
+                </div>
+                <p class="card__description">
+                  Вы можете посмотреть ещё больше интересных
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/img/png/news-backgraund-5.png"
+                class="card__backgraund-img" />
+              <img
+                src="./assets/img/svg/news-img-part1.svg"
+                class="card__img-part-one" />
+              <img
+                src="./assets/img/svg/news-img-part2.svg"
+                class="card__img-part-two" />
+
+              <div class="card__content">
+                <div class="card__title-wrapper">
+                  <p class="card__title">GE использует технологии Dell</p>
+                  <button class="card__button">
+                    <img src="./assets/img/svg/link-button-arrow.svg" />
+                  </button>
+                </div>
+                <p class="card__description">
+                  Вы можете посмотреть ещё больше интересных
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/img/png/news-backgraund-6.png"
+                class="card__backgraund-img" />
+              <img
+                src="./assets/img/svg/news-img-part1.svg"
+                class="card__img-part-one" />
+              <img
+                src="./assets/img/svg/news-img-part2.svg"
+                class="card__img-part-two" />
+
+              <div class="card__content">
+                <div class="card__title-wrapper">
+                  <p class="card__title">GE использует технологии Dell</p>
+                  <button class="card__button">
+                    <img src="./assets/img/svg/link-button-arrow.svg" />
+                  </button>
+                </div>
+                <p class="card__description">
+                  Вы можете посмотреть ещё больше интересных
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
