feat: finish news section and start form section

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card card--brighter">
             <span class="card__number">02</span>
             <img
               src="./assets/img/png/catalog-2.png"
@@ -260,7 +260,7 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card card--brighter">
             <span class="card__number">04</span>
             <img
               src="./assets/img/png/catalog-4.png"
@@ -406,143 +406,258 @@
 
           <div class="news__cards">
             <div class="card">
-              <img
-                src="./assets/img/png/news-backgraund-1.png"
-                class="card__backgraund-img" />
-              <img
-                src="./assets/img/svg/news-img-part1.svg"
-                class="card__img-part-one" />
-              <img
-                src="./assets/img/svg/news-img-part2.svg"
-                class="card__img-part-two" />
+              <div class="card__date">
+                <span class="card__day">11</span>
+                <span class="card__month">июля</span>
+              </div>
+              <div class="card__wrapper">
+                <img
+                  src="./assets/img/png/news-backgraund-1.png"
+                  class="card__backgraund-img" />
+                <img
+                  src="./assets/img/svg/news-img-part1.svg"
+                  class="card__img-part-one" />
+                <img
+                  src="./assets/img/svg/news-img-part2.svg"
+                  class="card__img-part-two" />
 
-              <div class="card__content">
-                <div class="card__title-wrapper">
-                  <p class="card__title">GE использует технологии Dell</p>
-                  <button class="card__button">
-                    <img src="./assets/img/svg/link-button-arrow.svg" />
-                  </button>
+                <div class="card__content">
+                  <div class="card__title-wrapper">
+                    <p class="card__title">GE использует технологии Dell</p>
+                    <button class="card__button">
+                      <img src="./assets/img/svg/link-button-arrow.svg" />
+                    </button>
+                  </div>
+                  <p class="card__description">
+                    Вы можете посмотреть ещё больше интересных
+                  </p>
                 </div>
-                <p class="card__description">
-                  Вы можете посмотреть ещё больше интересных
-                </p>
               </div>
             </div>
+
             <div class="card">
-              <img
-                src="./assets/img/png/news-backgraund-2.png"
-                class="card__backgraund-img" />
-              <img
-                src="./assets/img/svg/news-img-part1.svg"
-                class="card__img-part-one" />
-              <img
-                src="./assets/img/svg/news-img-part2.svg"
-                class="card__img-part-two" />
+              <div class="card__date">
+                <span class="card__day">11</span>
+                <span class="card__month">июля</span>
+              </div>
 
-              <div class="card__content">
-                <div class="card__title-wrapper">
-                  <p class="card__title">GE использует технологии Dell</p>
-                  <button class="card__button">
-                    <img src="./assets/img/svg/link-button-arrow.svg" />
-                  </button>
+              <div class="card__wrapper">
+                <img
+                  src="./assets/img/png/news-backgraund-2.png"
+                  class="card__backgraund-img" />
+                <img
+                  src="./assets/img/svg/news-img-part1.svg"
+                  class="card__img-part-one" />
+                <img
+                  src="./assets/img/svg/news-img-part2.svg"
+                  class="card__img-part-two" />
+
+                <div class="card__content">
+                  <div class="card__title-wrapper">
+                    <p class="card__title">GE использует технологии Dell</p>
+                    <button class="card__button">
+                      <img src="./assets/img/svg/link-button-arrow.svg" />
+                    </button>
+                  </div>
+                  <p class="card__description">
+                    Вы можете посмотреть ещё больше интересных
+                  </p>
                 </div>
-                <p class="card__description">
-                  Вы можете посмотреть ещё больше интересных
-                </p>
               </div>
             </div>
+
             <div class="card">
-              <img
-                src="./assets/img/png/news-backgraund-3.png"
-                class="card__backgraund-img" />
-              <img
-                src="./assets/img/svg/news-img-part1.svg"
-                class="card__img-part-one" />
-              <img
-                src="./assets/img/svg/news-img-part2.svg"
-                class="card__img-part-two" />
+              <div class="card__date">
+                <span class="card__day">11</span>
+                <span class="card__month">июля</span>
+              </div>
 
-              <div class="card__content">
-                <div class="card__title-wrapper">
-                  <p class="card__title">GE использует технологии Dell</p>
-                  <button class="card__button">
-                    <img src="./assets/img/svg/link-button-arrow.svg" />
-                  </button>
+              <div class="card__wrapper">
+                <img
+                  src="./assets/img/png/news-backgraund-3.png"
+                  class="card__backgraund-img" />
+                <img
+                  src="./assets/img/svg/news-img-part1.svg"
+                  class="card__img-part-one" />
+                <img
+                  src="./assets/img/svg/news-img-part2.svg"
+                  class="card__img-part-two" />
+
+                <div class="card__content">
+                  <div class="card__title-wrapper">
+                    <p class="card__title">GE использует технологии Dell</p>
+                    <button class="card__button">
+                      <img src="./assets/img/svg/link-button-arrow.svg" />
+                    </button>
+                  </div>
+                  <p class="card__description">
+                    Вы можете посмотреть ещё больше интересных
+                  </p>
                 </div>
-                <p class="card__description">
-                  Вы можете посмотреть ещё больше интересных
-                </p>
               </div>
             </div>
+
             <div class="card">
-              <img
-                src="./assets/img/png/news-backgraund-4.png"
-                class="card__backgraund-img" />
-              <img
-                src="./assets/img/svg/news-img-part1.svg"
-                class="card__img-part-one" />
-              <img
-                src="./assets/img/svg/news-img-part2.svg"
-                class="card__img-part-two" />
+              <div class="card__date">
+                <span class="card__day">11</span>
+                <span class="card__month">июля</span>
+              </div>
+              <div class="card__wrapper">
+                <img
+                  src="./assets/img/png/news-backgraund-4.png"
+                  class="card__backgraund-img" />
+                <img
+                  src="./assets/img/svg/news-img-part1.svg"
+                  class="card__img-part-one" />
+                <img
+                  src="./assets/img/svg/news-img-part2.svg"
+                  class="card__img-part-two" />
 
-              <div class="card__content">
-                <div class="card__title-wrapper">
-                  <p class="card__title">GE использует технологии Dell</p>
-                  <button class="card__button">
-                    <img src="./assets/img/svg/link-button-arrow.svg" />
-                  </button>
+                <div class="card__content">
+                  <div class="card__title-wrapper">
+                    <p class="card__title">GE использует технологии Dell</p>
+                    <button class="card__button">
+                      <img src="./assets/img/svg/link-button-arrow.svg" />
+                    </button>
+                  </div>
+                  <p class="card__description">
+                    Вы можете посмотреть ещё больше интересных
+                  </p>
                 </div>
-                <p class="card__description">
-                  Вы можете посмотреть ещё больше интересных
-                </p>
               </div>
             </div>
+
             <div class="card">
-              <img
-                src="./assets/img/png/news-backgraund-5.png"
-                class="card__backgraund-img" />
-              <img
-                src="./assets/img/svg/news-img-part1.svg"
-                class="card__img-part-one" />
-              <img
-                src="./assets/img/svg/news-img-part2.svg"
-                class="card__img-part-two" />
+              <div class="card__date">
+                <span class="card__day">11</span>
+                <span class="card__month">июля</span>
+              </div>
+              <div class="card__wrapper">
+                <img
+                  src="./assets/img/png/news-backgraund-5.png"
+                  class="card__backgraund-img" />
+                <img
+                  src="./assets/img/svg/news-img-part1.svg"
+                  class="card__img-part-one" />
+                <img
+                  src="./assets/img/svg/news-img-part2.svg"
+                  class="card__img-part-two" />
 
-              <div class="card__content">
-                <div class="card__title-wrapper">
-                  <p class="card__title">GE использует технологии Dell</p>
-                  <button class="card__button">
-                    <img src="./assets/img/svg/link-button-arrow.svg" />
-                  </button>
+                <div class="card__content">
+                  <div class="card__title-wrapper">
+                    <p class="card__title">GE использует технологии Dell</p>
+                    <button class="card__button">
+                      <img src="./assets/img/svg/link-button-arrow.svg" />
+                    </button>
+                  </div>
+                  <p class="card__description">
+                    Вы можете посмотреть ещё больше интересных
+                  </p>
                 </div>
-                <p class="card__description">
-                  Вы можете посмотреть ещё больше интересных
-                </p>
               </div>
             </div>
+
             <div class="card">
-              <img
-                src="./assets/img/png/news-backgraund-6.png"
-                class="card__backgraund-img" />
-              <img
-                src="./assets/img/svg/news-img-part1.svg"
-                class="card__img-part-one" />
-              <img
-                src="./assets/img/svg/news-img-part2.svg"
-                class="card__img-part-two" />
-
-              <div class="card__content">
-                <div class="card__title-wrapper">
-                  <p class="card__title">GE использует технологии Dell</p>
-                  <button class="card__button">
-                    <img src="./assets/img/svg/link-button-arrow.svg" />
-                  </button>
+              <div class="card__date">
+                <span class="card__day">11</span>
+                <span class="card__month">июня</span>
+              </div>
+              <div class="card__wrapper">
+                <img
+                  src="./assets/img/png/news-backgraund-6.png"
+                  class="card__backgraund-img" />
+                <img
+                  src="./assets/img/svg/news-img-part1.svg"
+                  class="card__img-part-one" />
+                <img
+                  src="./assets/img/svg/news-img-part2.svg"
+                  class="card__img-part-two" />
+                <div class="card__content">
+                  <div class="card__title-wrapper">
+                    <p class="card__title">GE использует технологии Dell</p>
+                    <button class="card__button">
+                      <img src="./assets/img/svg/link-button-arrow.svg" />
+                    </button>
+                  </div>
+                  <p class="card__description">
+                    Вы можете посмотреть ещё больше интересных
+                  </p>
                 </div>
-                <p class="card__description">
-                  Вы можете посмотреть ещё больше интересных
-                </p>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="form">
+        <div class="form__wrapper">
+          <div class="form__content">
+            <div class="form__contacts contacts">
+              <div class="contacts__header">
+                <p class="contacts__title">Наши контакты</p>
+                <p class="contacts__description">
+                  Dы можете связаться с нашим онлайн-консультантом
+                </p>
+              </div>
+
+              <ul class="contacts__list">
+                <li class="contacts__item item">
+                  <div class="item__wrapper">
+                    <a
+                      href="https://www.google.com/maps/place/%D0%91%D1%80%D0%B5%D1%81%D1%82/@52.0774685,
+                      23.7270421,16.25z/data=!4m6!3m5!1s0x47210c0223630975:0x4d319ea41f64ae99!8m2!3d52.0996507!4d23.7636662!16zL20vMDE1anNt"
+                      class="item__icon-wrapper">
+                      <img
+                        class="item__icon"
+                        src="./assets/img/svg/form-location-icon.svg" />
+                    </a>
+                    <p class="item__title">Адрес</p>
+                  </div>
+                  <p class="item__info">
+                    Москва, ул. 3-я Хорошевская, дом 2, строение 1
+                  </p>
+                </li>
+
+                <li class="contacts__item item">
+                  <div class="item__wrapper item__wrapper--email">
+                    <a
+                      href="mailto: markgorsharik@mail.com"
+                      class="item__icon-wrapper">
+                      <img
+                        class="item__icon"
+                        src="./assets/img/svg/form-email-icon.svg" />
+                    </a>
+                    <p class="item__title">E-mail</p>
+                  </div>
+                  <p class="item__info">dell_ru@gmail.com</p>
+                </li>
+
+                <li class="contacts__item item">
+                  <div class="item__wrapper">
+                    <a href="tel: +375336862774" class="item__icon-wrapper">
+                      <img
+                        class="item__icon"
+                        src="./assets/img/svg/form-tel-icon.svg" />
+                    </a>
+                    <p class="item__title">Телефон</p>
+                  </div>
+                  <p class="item__info">
+                    +7 495 737-06-01
+                    <br />
+                    +7 495 737-06-01
+                  </p>
+                </li>
+              </ul>
+              <div class="social">
+                <img
+                  class="social__icon"
+                  src="./assets/img/svg/form-facebook-icon.svg" />
+                <img
+                  class="social__icon"
+                  src="./assets/img/svg/form-whatsup-icon.svg" />
+              </div>
+            </div>
+            <div class="form__request"></div>
           </div>
         </div>
       </section>
